# convnet-rust

./: Cargo.toml  LICENSE  README.md
examples/: mnist.rs
examples/data/mnist/: .gitignore  README.md
src/: batch.rs  lib.rs  net.rs  trainer.rs  utils.rs  vol.rs
src/layers/: conv_layer.rs  input_layer.rs  loss_layer.rs  mod.rs  nonlinear_layer.rs  pool_layer.rs
src/net/: mod.rs  serde.rs
src/vol/: mod.rs  serde.rs
