[package]
name = "convnet-rust"
version = "0.1.0"
edition = "2021"

[features]
uniffi = [ "dep:uniffi" ]

[dependencies]
bincode = "1.3.3"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.203", features = ["derive"] }
typetag = "0.2.16"

uniffi = { version = "0.27", features = ["cli"], optional = true }

[dev-dependencies]
image = "0.25.1"
